k8s-operator/config/samples/webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eidolon-webui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
    spec:
      containers:
      - name: webui
        image: docker.io/eidolonai/webui:1.0.50
        imagePullPolicy: IfNotPresent
