k8s-operator/config/samples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eidolon-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: server.eidolonai.test
      http:
        paths:
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: eidolon-service
                port:
                  number: 8080
    - host: www.eidolonai.test
      http:
        paths:
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: eidolon-ui-service
                port:
                  number: 3000
