k8s-operator/config/samples/sample-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eidolon-deployment
spec:
  selector:
    matchLabels:
      app: eidolon
  replicas: 1
  template:
    metadata:
      labels:
        app: eidolon
    spec:
      containers:
      - name: eidolon-server
        image: docker.io/eidolonai/sdk:0.1.87
        args:
          - /etc/eidolon/resources/machine/machine.yaml
          - /etc/eidolon/resources/agents/speech_agent.yaml
          - /etc/eidolon/resources/references/frugal_cpu.yaml
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: machine-config
            mountPath: /etc/eidolon/resources
          - name: agent-config
            mountPath: /etc/eidolon/resources
          - name: reference-config
            mountPath: /etc/eidolon/resources
      volumes:
        - name: machine-config
          configMap:
            name: eidolon-machine-cm
        - name: agent-config
          configMap:
            name: eidolon-agent-cm
        - name: reference-config
          configMap:
            name: eidolon-reference-cm
---
apiVersion: v1
kind: Service
metadata:
  name: eidolon-service
spec:
  type: NodePort
  selector:
    app: eidolon
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eidolon-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: eidolon-service
                port:
                  number: 8080
